bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:6: error: type mismatch;
 found   : Unit
 required: Boolean
  if(weekday==true && vacation ==false) {
  ^